---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
" Analyzing (0s • Esc to interrupt)                                              "
"                                                                                "
"▌ Ask Codex to do anything                                                      "
" ⏎ send   Ctrl+J newline   Ctrl+V paste image   Ctrl+T transcript   Ctrl+C quit "
"                                                                                "
